# mpaheaderInfo

./: .gitignore  APETag.cpp  AboutDlg.cpp  CMakeLists.txt  CMakeSettings.json  ID3V2Tag.cpp  LameTag.cpp  Lyrics3Tag.cpp  MPAEndOfFileException.cpp  MPAException.cpp  MPAException.h  MPAFile.cpp  MPAFileStream.cpp  MPAFileStream.h  MPAFrame.cpp  MPAFrame.h  MPAHeader.cpp  MPAHeader.h  MPAStream.cpp  MPAStream.h  MPEGAudioInfo.cpp  MPEGAudioInfo.h  MPEGAudioInfo.rc  MPEGAudioInfoDlg.cpp  MPEGAudioInfoDlg.h  MusicMatchTag.cpp  Platform.cpp  Platform.h  README.md  Tag.cpp  Tag.h  Tags.cpp  VBRHeader.cpp  XINGHeader.cpp  base_dlg.cpp  base_dlg.h  dpi_wnd_behavior.cpp  dpi_wnd_behavior.h  resource.h  stdafx.h
.github/workflows/: build.yml  codeql.yml
